adding in new stream

--- a/Pages/content.html
+++ b/Pages/content.html
@@ -29,6 +29,14 @@
 
         <div class="content">
 
+            <a class="content-box-items" href="https://www.twitch.tv/videos/1244492396">
+                <img class="content-photos" src="/images/colorpie.png" alt="Colorpie">
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Vintage Cube</h>
+                    <p class="photo-caption-p">12/26/2021</p>
+                </div>
+            </a>
+
             <a class="content-box-items" href="https://www.twitch.tv/videos/1234724350">
                 <img class="content-photos" src="/images/Urza-Lord.jpg" alt="Urza-Lord">
                 <div class="bottom-left">
