adding in charlie and roy details

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -340,6 +340,8 @@
                 <p> Preferred archetype: Coco midrange, Grindy</p>
                 <br>
                 <p> First Set: Original Theros</p>
+                <br>
+                <a href="https://www.twitch.tv/penguiturtle">Twitch Channel</a>
             </div>
         </div>
 
