adding roy twitch bracket

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -481,13 +481,15 @@
             <div class="member-info">
                 <p>Titles: Pat's Store Champion</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Draft, Sealed, Standard, Modern, Historic</p>
                 <br>
-                <p>Favorite Format: Vintage Cube</p>
+                <p>Favorite Format: Draft, Sealed, Standard, Modern, Historic</p>
                 <br>
                 <p> Preferred archetype: MonoR/MonoW</p>
                 <br>
-                <p> First Set: blah blah blah</p>
+                <p> First Set: Onslaught</p>
+                <br>
+                <a href="#">Twitch Channel</a>
             </div>
         </div>
 
