adding in new content

--- a/Pages/content.html
+++ b/Pages/content.html
@@ -29,6 +29,14 @@
 
         <div class="content">
 
+            <a class="content-box-items" href="https://www.twitch.tv/videos/1247232730">
+                <img class="content-photos" src="/images/Crusader-photo.jpg" alt="Crusader">
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Sultai Infect With Bad Mic lol</h>
+                    <p class="photo-caption-p">12/29/2021</p>
+                </div>
+            </a>
+
             <a class="content-box-items" href="https://www.twitch.tv/videos/1245103260">
                 <img class="content-photos" src="/images/colorpie.png" alt="Colorpie">
                 <div class="bottom-left">
