adding in new content item

--- a/Pages/content.html
+++ b/Pages/content.html
@@ -28,6 +28,14 @@
     <section class="content-area">
 
         <div class="content">
+            
+            <a class="content-box-items" href="https://www.twitch.tv/videos/1253446313>
+                <img class="content-photos" src="/images/Urza-Lord.jpg" alt="Urza-Lord">
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Modern Thopter Sword</h>
+                    <p class="photo-caption-p">1/4/2022</p>
+                </div>
+            </a>
 
             <a class="content-box-items" href="https://www.twitch.tv/videos/1247232730">
                 <img class="content-photos" src="/images/Crusader-photo.jpg" alt="Crusader">
