--- a/Pages/content.html
+++ b/Pages/content.html
@@ -29,7 +29,7 @@
 
         <div class="content">
             
-            <a class="content-box-items" href="https://www.twitch.tv/videos/1253446313>
+            <a class="content-box-items" href="https://www.twitch.tv/videos/1253446313">
                 <img class="content-photos" src="/images/Urza-Lord.jpg" alt="Urza-Lord">
                 <div class="bottom-left">
                     <h class="photo-caption-h">Modern Thopter Sword</h>
