first button introduction and stylings

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -28,9 +28,9 @@
         <!-- Alec's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Alec-card">
+                <button ID="alecBtn" class="button">
                     <img class="card-link-photo" rel="member-photo"  src="/images/Alec-photo.jpg"  alt="Alec">
-                </a>
+                </button>
                 <a ID="Alec" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
