switched to button elements

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -45,9 +45,9 @@
         <!-- Alex's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Alex-card">
+                <button ID="alexBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
-                </a>
+                </button>
 
                 <a ID="Alex" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -63,9 +63,9 @@
         <!-- Aubreys Card link -->
         <div class="card">
             <div class="card-link">
-                <a href=#Aubrey-card>
+                <button ID="aubreyBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Aubrey-photo.jpg"  alt="Aubrey">
-                </a>
+                </button>
 
                 <a ID="Aubrey" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -81,9 +81,9 @@
         <!-- Charlies Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Charlie-card">
+                <button ID="charlieBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Charlie-photo.jpg"  alt="Charlie">
-                </a>
+                </button>
 
                 <a ID="Charlie" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -99,9 +99,9 @@
         <!-- Garret's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Garret-card">
+                <button ID="garretBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Garret-photo.jpg"  alt="Garret">
-                </a>
+                </button>
 
                 <a ID="Garret" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -117,9 +117,9 @@
         <!-- Joseph's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Joseph-card">
+                <button ID="josephBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Joseph-photo.jpg"  alt="Joseph JoJo">
-                </a>
+                </button>
 
                 <a ID="Joseph" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -135,9 +135,9 @@
         <!-- Michael's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Michael-card">
+                <button ID="michaelBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/placeholder.jpg"  alt="Michael">
-                </a>
+                </button>
 
                 <a ID="Michael" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -153,9 +153,9 @@
         <!-- Nick's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Nick-card">
+                <button ID="nickBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Nick-photo.jpg"  alt="Nick">
-                </a>
+                </button>
 
                 <a ID="Nick" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -171,9 +171,9 @@
         <!-- Roy's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Roy-card">
+                <button ID="royBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Roy-photo.jpg"  alt="Roy">
-                </a>
+                </button>
 
                 <a ID="Roy" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -189,9 +189,9 @@
         <!-- Trey's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href="#Trey-card">
+                <button ID="treyBtn" class="button">
                     <img class="card-link-photo" rel="member-photo" src="/images/Trey-photo.jpg"  alt="Trey">
-                </a>
+                </button>
 
                 <a ID="Trey" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
