--- a/Pages/about.html
+++ b/Pages/about.html
@@ -208,9 +208,9 @@
         <!-- <div class="card">
             <div class="card-link">
 
-                <a href="#member-card">
+                <button ID="nameBtn" class="button"
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-                </a>
+            </button>
 
                 <a ID="name" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -225,10 +225,12 @@
 
     </section>
 
-    <!-- Alec's full info card -->
-    <section class=card-info>
 
-        <div class="info-card" id="Alec-card">
+<!-- Modal's -->
+
+
+    <!-- Alec's full info card -->
+        <div class="info-card" id="alecModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Alec-photo.jpg" alt="Alec">
 
@@ -256,7 +258,7 @@
         </div>
 
         <!-- Alex's full info card -->
-        <div class="info-card" id="Alex-card">
+        <div class="info-card" id="alexModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
 
@@ -286,7 +288,7 @@
         </div>
 
         <!-- Aubrey's full info card -->
-        <div class="info-card" id="Aubrey-card">
+        <div class="info-card" id="aubreyModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Aubrey-photo.jpg" alt="Aubrey">
 
@@ -316,7 +318,7 @@
         </div>
 
         <!-- Charlies's full info card -->
-        <div class="info-card" id="Charlie-card">
+        <div class="info-card" id="charliecModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
@@ -346,7 +348,7 @@
         </div>
 
         <!-- Garrets's full info card -->
-        <div class="info-card" id="Garret-card">
+        <div class="info-card" id="garretModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Garret-photo.jpg" alt="Garret">
 
@@ -376,7 +378,7 @@
         </div>
 
         <!-- Joseph's full info card -->
-        <div class="info-card" id="Joseph-card">
+        <div class="info-card" id="josephModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
@@ -406,7 +408,7 @@
         </div>
 
         <!-- Michaels's full info card -->
-        <div class="info-card" id="Michael-card">
+        <div class="info-card" id="michaelModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
@@ -434,7 +436,7 @@
         </div>
 
         <!-- Nick's full info card -->
-        <div class="info-card" id="Nick-card">
+        <div class="info-card" id="nickModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
@@ -464,7 +466,7 @@
         </div>
 
         <!-- Roy's full info card -->
-        <div class="info-card" id="Roy-card">
+        <div class="info-card" id="royModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
@@ -494,7 +496,7 @@
         </div>
 
         <!-- Trey's full info card -->
-        <div class="info-card" id="Trey-card">
+        <div class="info-card" id="treyModal">
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Trey-photo.jpg" alt="Trey">
 
@@ -522,7 +524,7 @@
         </div>
 
         <!-- template for card -->
-        <!-- <div class="card" id="name-card">
+        <!-- <div class="card" id="nameModal">
             <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
 
@@ -548,7 +550,6 @@
                 <p> Anything else?: blah blah blah</p>
             </div>
         </div> -->
-    </section>
 
 
 </body>
