adding in closing box span and stylings

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -231,6 +231,7 @@
 
     <!-- Alec's full info card -->
         <div class="info-card" id="alecModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Alec-photo.jpg" alt="Alec">
 
@@ -259,6 +260,7 @@
 
         <!-- Alex's full info card -->
         <div class="info-card" id="alexModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
 
@@ -289,6 +291,7 @@
 
         <!-- Aubrey's full info card -->
         <div class="info-card" id="aubreyModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Aubrey-photo.jpg" alt="Aubrey">
 
@@ -319,6 +322,7 @@
 
         <!-- Charlies's full info card -->
         <div class="info-card" id="charliecModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
@@ -349,6 +353,7 @@
 
         <!-- Garrets's full info card -->
         <div class="info-card" id="garretModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Garret-photo.jpg" alt="Garret">
 
@@ -379,6 +384,7 @@
 
         <!-- Joseph's full info card -->
         <div class="info-card" id="josephModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
@@ -409,6 +415,7 @@
 
         <!-- Michaels's full info card -->
         <div class="info-card" id="michaelModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
@@ -437,6 +444,7 @@
 
         <!-- Nick's full info card -->
         <div class="info-card" id="nickModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
@@ -467,6 +475,7 @@
 
         <!-- Roy's full info card -->
         <div class="info-card" id="royModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
@@ -497,6 +506,7 @@
 
         <!-- Trey's full info card -->
         <div class="info-card" id="treyModal">
+            <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Trey-photo.jpg" alt="Trey">
 
@@ -525,6 +535,7 @@
 
         <!-- template for card -->
         <!-- <div class="card" id="nameModal">
+            <span class="close">&times;</span>
             <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
 
