first bug corrected, now closes when clicked outside

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -230,7 +230,8 @@
 
 
     <!-- Alec's full info card -->
-        <div class="info-card" id="alecModal">
+    <div class="modal" id="alecModal">
+        <div class="info-card">
             <span class="close">&times;</span>
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Alec-photo.jpg" alt="Alec">
@@ -257,6 +258,8 @@
                 <p> First Set:  Ravnica: City of Guilds</p>
             </div>
         </div>
+    </div>
+
 
         <!-- Alex's full info card -->
         <div class="info-card" id="alexModal">
